syntax = "proto3";

package proto;

option go_package = "pkg/proto";

message LoginRequest {
  string login = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
}

message RegisterRequest {
  string login = 1;
  string password = 2;
}

message RegisterResponse {
  string access_token = 1;
}

service Users {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Register(RegisterRequest) returns (RegisterResponse);
}